--- a/index.html
+++ b/index.html
@@ -4,7 +4,78 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Odin - Landing Page</title>
+    <title>The Box</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <p>The Box</p>
+      <a href="#" class="nav-link">Our story</a>
+      <a href="#" class="nav-link">Who Are We</a>
+      <a href="#" class="nav-link">Contact</a>
+    </div>
+    <div class="welcome">
+      <div class="welcome-left">
+        <div class="welcome-title">Finding a place, one moment at a time</div>
+        <div class="welcome-text">
+          Determined. Driven. Dependable. We find solutions for your company
+          boxing needs. Storage has always been an issue for small businesses,
+          instead let us take care of it for you. Click the button below to get
+          started today!
+        </div>
+        <button class="welcome-modal">Sign up</button>
+      </div>
+      <div class="welcome-right">
+        <img
+          src="img/box-upsplash.jpg"
+          alt="Open Box"
+          width="640px"
+          height="426px"
+        />
+      </div>
+    </div>
+    <div class="info">
+      <div class="info-title">Our Company</div>
+      <figure class="portrait">
+        <img src="img/employee.svg" alt="Ana" />
+        <figcaption>Ana - Big Box Leader</figcaption>
+      </figure>
+      <figure class="portrait">
+        <img src="img/employee.svg" alt="Greg" />
+        <figcaption>Greg - Medium Box Leader</figcaption>
+      </figure>
+      <figure class="portrait">
+        <img src="img/employee.svg" alt="Emily" />
+        <figcaption>Emily - Small Box Leader</figcaption>
+      </figure>
+      <figure class="portrait">
+        <img src="img/employee.svg" alt="Hank" />
+        <figcaption>Hank - Box intern</figcaption>
+      </figure>
+    </div>
+    <div class="quote">
+      <figure class="quote-text">
+        <blockquote>
+          I was never sure who contacted them, but I do admire their dedication.
+          All we needed was an empty box to place documents to shred. It took
+          them an outstanding week to determine the proper size we needed. I
+          mean, it worked? But, you know, we could have just used one of the
+          empty boxes from our copy paper orders. They were super friendly
+          though.
+        </blockquote>
+        <figcaption>&dash;Tim, Accountant from Buisness Inc.</figcaption>
+      </figure>
+    </div>
+    <div class="signup">
+      <div class="signup-conent">
+        <div class="signup-text">
+          What are you wating for? Sign up now for a free quote!
+        </div>
+        <button class="signup-button">Sign Up</button>
+      </div>
+    </div>
+    <div class="footer">
+      Developed by &dash;
+      <a href="https://github.com/luinrandir" target="_blank">Luin Randir</a>
+    </div>
+  </body>
 </html>
